# piccolo_teatro

./: pyproject.toml  setup.py
piccolo_teatro/config/: __init__.py
piccolo_teatro/data_ingestion/: feature_engineering.py
piccolo_teatro/implementations/: trend_predictions.py
piccolo_teatro/tests/: trend_prediction.py
piccolo_teatro/train/: model_preparation.py  train_trend_model.py
piccolo_teatro/use_cases/: trend_prediction.py
piccolo_teatro/utils/: __init__.py
src/: .env  average_trend.py  feature_engineering.py  model_no_show_info.py  test.py  to_do  train_trend_model.py  train_trend_model_perc.py
src/config/: __init__.py  not_used_features.py  test.py  train_config.py
src/data_ingestion/: feature_engineering.py
src/models/: XGB_trend.pkl
src/tests/: performance_trend_prediction.py  show_trend_prediction.py  trend_prediction.py
src/train/: model_preparation.py  train_trend_model.py
src/use_cases/: trend_prediction.py
src/utils/: df_operations.py  logger.py  logger_configuration.py
